name:          nano-cryptr
version:       0.2.1
synopsis:      A threadsafe binding to glibc's crypt_r function
license:       BSD3
license-file:  LICENSE
author:        Carl Howells
maintainer:    engineering@janrain.com, chowells79@gmail.com
copyright:     Carl Howells, 2010
homepage:      https://github.com/janrain/nano-cryptr
category:      System
build-type:    Simple
cabal-version: >=1.8
description:
  This package wraps @glibc@'s @crypt_r@ function in a thread-safe manner.

tested-with:   GHC ==9.4.8

library
  exposed-modules: System.Gnu.CryptR
  build-depends:
      base        >=4     && <5
    , bytestring  >=0.9.1

  ghc-options:     -Wall
  build-tools:     hsc2hs >=0
  cc-options:      -D_GNU_SOURCE
  extra-libraries: crypt

-------------------------------------------------------------------------------
test-suite unit-tests
  hs-source-dirs: test
  main-is:        Test.hs
  type:           exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , HUnit
    , nano-cryptr
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2

-------------------------------------------------------------------------------
source-repository head
  type:     git
  location: https://github.com/janrain/nano-cryptr.git
